# s-calc-core

./: .gitignore  .npmignore  README.md  binding.gyp  binding.js  core.js  index.d.ts  main.js  package-lock.json  package.json  test.ts  tsconfig.json  tslint.json
@types/: index.d.ts  typing.d.ts
@types/@scalc/core/: index.d.ts
binding/: binding.js  index.ts  package-lock.json  package.json  test.ts  tsconfig.json
binding/distTest/: binding.js.map  index.js  index.js.map  test.js  test.js.map
binding/myTypes/binding/: index.d.ts
core/: CMakeLists.txt  main.c  napi-bridge.c  string_list.c  token_list.c  token_list.h  tokenizer.c  tokenizer.h
core/common/: string_list.c  string_list.h  token.c  token.h  token_queue.c  token_queue.h  token_stack.c  token_stack.h
core/math/: functions.c  functions.h
core/n-api/: napi-bridge.c
core/rpn_writer/: rpn_writer.c  rpn_writer.h
core/status/: status.c  status.h
core/tokenizer/: tokenizer.c  tokenizer.h
tests/: main.spec.ts  testd.directive.spec.ts  testd.spec.ts
types/scalc/core/: index.d.ts
